NIFI-15254 Add requested PR review changes and compression types.